--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-center">
   <div class="form-container">
     <div class="form-section">
-      <pichincha-typography>Iniciar Sesión</pichincha-typography>
+      <pichincha-typography variant="h3" weight="bold" color="black">Iniciar Sesión</pichincha-typography>
       <hr>
       <form class="login-form" [formGroup]="loginForm">
         <pichincha-input appInputAccessor formControlName="username" id-element="username" label="Nombre de usuario"
