--- a/src/app/components/books/books.component.html
+++ b/src/app/components/books/books.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-  <div class="title-section">
+  <div class="row">
     <pichincha-typography variant="h2" weight="bold" color="black">Tus Libros</pichincha-typography>
     <pichincha-button (click)="onAddBook()" size="medium" id="register" color="secondary">
       Agregar Libro
     </pichincha-button>
   </div>
-  <div class="title-section">
+  <div class="row">
     <pichincha-input (ikeyup)="onSearch($any($event))" class="input" placeholder="Búsqueda, Ej: React, Angular" id-element="search" [fullWidth]="true">
     </pichincha-input>
     <pichincha-select class="input" id-element="select-category" size="small" placeholder="Selecciona una categoría"
