--- a/src/app/components/add-book/add-book.component.html
+++ b/src/app/components/add-book/add-book.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
-    <pichincha-typography variant="h2" weight="bold" color="black">Registro Libro</pichincha-typography>
+    <pichincha-typography variant="h2" weight="bold" color="black">{{bookToEdit ? 'Edición Libro' : 'Registro Libro'}}
+    </pichincha-typography>
   </div>
   <form [formGroup]="newBookForm">
     <div class="row">
@@ -56,7 +57,7 @@
         Cancelar
       </pichincha-button>
       <pichincha-button (click)="onRegister()" size="medium" id="register" color="primary" [loading]="loading">
-        Registrar
+        {{bookToEdit ? 'Guardar' : 'Registrar'}}
       </pichincha-button>
     </div>
   </form>
